estructura principal feita

--- a/UF1_Proyecto/app/src/main/res/values/strings.xml
+++ b/UF1_Proyecto/app/src/main/res/values/strings.xml
@@ -1,3 +1,22 @@
 <resources>
     <string name="app_name">EverHorizon</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="calendar_txt">Calendar</string>
+    <string name="map_txt">Map</string>
+    <string name="info_txt">Info</string>
+
+    <string name="next_trip">Your next trip</string>
+    <string name="cities">Cities</string>
+    <string name="countries">Countries</string>
+    <string name="transport">Transport</string>
+    <string name="stay">Stay</string>
+    <string name="place">Place</string>
+    <string name="recommendations">Recommendations</string>
+    <string name="items">Items</string>
+    <string name="notes">Notes</string>
+    <string name="suitcase">Suitcase</string>
+    <string name="wallet">Wallet</string>
+    <string name="album">Album</string>
+
 </resources>
