--- a/UF1_Proyecto/app/src/main/res/values-es/strings.xml
+++ b/UF1_Proyecto/app/src/main/res/values-es/strings.xml
@@ -3,6 +3,8 @@
     <string name="app_name">EverHorizon</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <string name="calendarFirstDay">"2"</string>
+
     <string name="calendar_txt">Calendario</string>
     <string name="map_txt">Mapa</string>
     <string name="info_txt">Info</string>
