--- a/UF1_Proyecto/app/src/main/res/values-es/strings.xml
+++ b/UF1_Proyecto/app/src/main/res/values-es/strings.xml
@@ -24,4 +24,9 @@
     <string name="suitcase">Maleta</string>
     <string name="wallet">Billetera</string>
     <string name="album">Álbum</string>
+
+    <!--SelectedCityFragment-->
+    <string name ="activities">Actividades que se pueden hacer:</string>
+    <string name ="places">Lugares para visitar:</string>
+    <string name="typical">Comida típica que se puede probar:</string>
 </resources>
