--- a/doc/1.descripcion.md
+++ b/doc/1.descripcion.md
@@ -1,16 +1,24 @@
 # Descripción del Proyecto
 
-En esta sección, se proporcionará una visión general del proyecto en cuestión, destacando sus objetivos, alcance y contexto general.
-
+Esta aplicación de gestión de viajes llamada EverHorizon funcionará como una herramienta integral diseñada para facilitar la planificación y organización de los viajes de los usuarios. De esta forma, se podrán encontrar destinos interesantes para posteriormente organizar un viaje a ese lugar de forma simple y rápida.
 ## Justificación del Proyecto
 
-En este apartado, se argumenta la razón y necesidad detrás del proyecto. Se explican los problemas o desafíos que se abordarán y por qué es relevante llevar a cabo el proyecto.
+La creación de esta aplicación responde a la creciente necesidad de simplificar y optimizar la gestión de viajes en un mundo cada vez más conectado. La complejidad de organizar itinerarios y reservar servicios se ha convertido en un desafío común. Esta aplicación busca abordar dichos desafíos, ofreciendo una solución integral que ahorre tiempo, reduzca el estrés y mejore la experiencia general del usuario durante sus viajes.
+
+Problemas que justifican el proyecto:
+
+Desorganización en la planificación de viajes.
+Elección de destino no acorde con los gustos del usuario.
+Destino no adecuado a la época.
+Pérdida de información importante relacionada con el viaje.
 
 ## Estudio de Necesidades
 
-En este apartado, se analizan en detalle las necesidades que el proyecto pretende satisfacer. Se pueden incluir datos o investigaciones que respalden la identificación de estas necesidades.
+Este proyecto se basa en un gusto general por viajar y la necesidad de centralizar todos los pasos a la hora de organizar un viaje. De esta forma, se evitarán los despistes más comunes. Se ve en el mercado la presencia de empresas que se encargan de buscar hotel, avión, etc. Pero, no se encuentra ninguna herramienta que tenga acceso rápido a todos ellos, pudiendo así comparar rapidamente. Así, también podremos encontrar información muy simplificada sobre nuestro destino, agilizando la decisión de a dónde viajar. Todo esto hace que la organización de los viajes sea rápida, proceso que suele ser tedioso y lento, además de ser odiado por muchos viajeros por ser muy fácil de cometer errores. 
+
+
 
 ## Personas Destinatarias
 
-En esta sección, se describe el grupo de personas o entidades a las que está destinado el proyecto. Se proporciona una comprensión de quiénes se beneficiarán directa o indirectamente de sus resultados.
+La aplicación está dirigida sobre todo a usuarios que buscan un lugar de vacaciones adecuado a sus gustos. De todas formas, también se podría gestionar para viajes por trabajo u otro tipo de viajes. Aquellas personas que buscan una herramienta integral para organizar sus experiencias de viaje encontrarán beneficios significativos. La aplicación pretende ser inclusiva y adaptable a diversos perfiles de usuarios, garantizando que tanto los novatos como los viajeros experimentados puedan aprovechar sus funciones para una experiencia de viaje más enriquecedora y sin complicaciones.
 
