--- a/doc/1.descripcion.md
+++ b/doc/1.descripcion.md
@@ -7,10 +7,10 @@ La creación de esta aplicación responde a la creciente necesidad de simplifica
 
 Problemas que justifican el proyecto:
 
-Desorganización en la planificación de viajes.
-Elección de destino no acorde con los gustos del usuario.
-Destino no adecuado a la época.
-Pérdida de información importante relacionada con el viaje.
+Desorganización en la planificación de viajes, 
+elección de destino no acorde con los gustos del usuario.
+destino no adecuado a la época.
+pérdida de información importante relacionada con el viaje.
 
 ## Estudio de Necesidades
 
