versión final de descripción.md

--- a/doc/1.descripcion.md
+++ b/doc/1.descripcion.md
@@ -5,12 +5,7 @@ Esta aplicación de gestión de viajes llamada EverHorizon funcionará como una 
 
 La creación de esta aplicación responde a la creciente necesidad de simplificar y optimizar la gestión de viajes en un mundo cada vez más conectado. La complejidad de organizar itinerarios y reservar servicios se ha convertido en un desafío común. Esta aplicación busca abordar dichos desafíos, ofreciendo una solución integral que ahorre tiempo, reduzca el estrés y mejore la experiencia general del usuario durante sus viajes.
 
-Problemas que justifican el proyecto:
-
-Desorganización en la planificación de viajes, 
-elección de destino no acorde con los gustos del usuario.
-destino no adecuado a la época.
-pérdida de información importante relacionada con el viaje.
+Problemas que justifican el proyecto: Desorganización en la planificación de viajes, elección de destino no acorde con los gustos del usuario, destino no adecuado a la época, pérdida de información importante relacionada con el viaje.
 
 ## Estudio de Necesidades
 
