modificación de analisis.md

--- a/doc/2.analisis.md
+++ b/doc/2.analisis.md
@@ -1,11 +1,31 @@
 # Análisis de Funcionalidades
 
-En esta sección, se destacan las funciones y características esenciales que el sistema debe incorporar. Estas funcionalidades juegan un papel fundamental para alcanzar los objetivos del proyecto.
+Para la realización de este proyecto se consideraron importantes las siguientes funciones:
+- Poder ver la información más relevante de una determinada ciudad/país de forma simplificada
+- Poder acceder a las páginas oficiales de las distintas compañías rapidamente
+- Poder visualizar la posición de las distintas ciudades en un mapa
+- Poder ser aconsejados de las mejores ciudades para visitar dependiendo del día
+- Poder organizar un viaje a un determinado destino y guardar información relevante sobre este para consultar posteriormente
 
 ## Retos
 
-En este apartado, se identifican los desafíos y obstáculos que pueden surgir durante el desarrollo o implementación del sistema. Estos retos son críticos para comprender y abordar en la planificación y ejecución del proyecto.
+Algunos de los retos más importantes a lo largo de la creación y evolución del proyecto fueron los siguientes:
+- Objectivos ambiciosos que generaron muchos cambios de código para simplificar el proyecto
+- Implementación de Google Maps
+- Uso de una gran cantidad de información multilingüe
+- Buscar una alternativa a room para conseguir persistencia
+- Manejo de muchos RecyclerView diferentes que requirió mucha organización
 
 ## Mejoras Futuras
 
-En esta sección, se exploran las oportunidades de mejora que se pueden considerar a medida que el sistema evoluciona. Se presentan posibles mejoras y desarrollos futuros que podrían aumentar la eficacia o la utilidad del sistema con el tiempo.
+Debido a la gran ambición del proyecto se considerán muchas mejoras futuras para ampliar la funcionalidad y/o mejor experiencia del usuario, estas son:
+- Implementación de una base de datos
+- Mejorar el aspecto de la aplicación en modo oscuro
+- Insertar más datos de ciudades, países y compañías
+- Incluir la ubicación actual en Google Maps
+- Incluir rutas en Google Maps
+- Recomendarle al usuario las mejores compañías para la organización e un determinado viaje
+- Implementar notificaciones que avisen al usuario cuando se aproxima la fecha de su viaje
+- Creación de un apartado que incluya viajes ya realizados
+- Creación de un inventario donde guardar documentación importante para el viaje
+- Incluir la posiblidad de entrar con un usuario de forma que se guarde la información para distintos dispositivos
