modificación diseño.md

--- a/doc/3.disenho.md
+++ b/doc/3.disenho.md
@@ -1,7 +1,25 @@
 # Diseño 
 
-Funciones y características clave que el sistema debe incluir. Estas funcionalidades son esenciales para cumplir con los objetivos del proyecto.
+Para el diseño de nuestro proyecto implementamos muchos de los elementos dados en clase, entre otros: 
+- Binding
+- Moverse entre fragmentos
+- Menús
+- Barras de navegación
+- Radio buttons
+- Chip group
+- Constraint Layout
+- Implementación plurilingüe
+
+Además se incorporaron nuevos conceptos como:
+- RecyclerView
+- Calendar
+- Google Maps
+- Shared Preferences
+
+Con todos estos conseguimos llevar a cabo las funciones ya explicadas en el analisis.md
 
 ## Navegación 
 
-Se adjuntará un esquema de mockup’s de las diferentes pantallas, la navegación y los datos intercambiados entre ellas
+Este sería nuestro esquema de mockup's: 
+
+![mockups](https://github.com/a22dianart/DAM_UF1_Proyecto/assets/114477134/9fa9bb79-7090-45c7-9b3f-b52c9932cf23)
